updates model bd image

--- a/views/Allconferencias.pug
+++ b/views/Allconferencias.pug
@@ -28,7 +28,7 @@ block content
           .col-sm-7.col-lg-4.events-link
 
             .thumbnail.offer.margins.links.hvr-grow-shadow
-             a.image-a.img-responsive(href='/details/'+ conferencia.id)
+             a.image-a.img-responsive(href='/conferencias/details/'+ conferencia.id)
               img(src= conferencia.imageUrl, width="201px" height="174px" class="image2")
               
               h2.tit#box.text-center
