--- a/views/Allinstructores.pug
+++ b/views/Allinstructores.pug
@@ -28,7 +28,7 @@ block content
           .col-sm-7.col-lg-4.events-link
 
             .thumbnail.offer.margins.links.hvr-grow-shadow
-             a.image-a.img-responsive(href='/details/'+ instructor.id)
+             a.image-a.img-responsive(href='/instructores/details/'+ instructor.id)
               img(src= instructor.imageUrl, width="201px" height="174px" class="image2")
               
               h2.tit#box.text-center
