--- a/views/Alltalleres.pug
+++ b/views/Alltalleres.pug
@@ -28,7 +28,7 @@ block content
           .col-sm-7.col-lg-4.events-link
 
             .thumbnail.offer.margins.links.hvr-grow-shadow
-             a.image-a.img-responsive(href='/details/'+ taller.id)
+             a.image-a.img-responsive(href='/talleres/details/'+ taller.id)
               img(src= taller.imageUrl, width="201px" height="174px" class="image2")
               
               h2.tit#box.text-center
