--- a/views/add-event-formacion.pug
+++ b/views/add-event-formacion.pug
@@ -25,7 +25,7 @@ block content
  
   h1.font-categories.container Formaciones
   .container.well
-      form.edit-retiro(action= action ? action : '/acount-formacion/add' method= method ? method : 'POST' enctype="multipart/form-data")
+      form.edit-retiro(action= action ? action : '/formaciones/acount/add' method= method ? method : 'POST' enctype="multipart/form-data")
         .container
           .col-sm-8        
         .row
