--- a/views/add-event-taller.pug
+++ b/views/add-event-taller.pug
@@ -25,7 +25,7 @@ block content
  
   h1.font-categories.container Talleres
   .container.well
-      form.edit-retiro(action= action ? action : '/acount-taller/add' method= method ? method : 'POST' enctype="multipart/form-data")
+      form.edit-retiro(action= action ? action : '/talleres/acount/add' method= method ? method : 'POST' enctype="multipart/form-data")
         .container
           .col-sm-8        
         .row
