--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -29,7 +29,7 @@ block content
         #collapseOne.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingOne')
           .panel-body
             aside.text-right
-              a(href='/acount-retiro/empty')
+              a(href='/retiros/acount/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
             .row.cont-body
@@ -131,7 +131,7 @@ block content
         #collapseTwo.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingTwo')
          .panel-body
             aside.text-right
-              a(href='/acount-formacion/empty')
+              a(href='/formaciones/acount/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
             .row.cont-body
@@ -232,7 +232,7 @@ block content
         #collapseThree.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingThree')
           .panel-body
             aside.text-right
-              a(href='/acount-taller/empty')
+              a(href='/talleres/acount/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
             .row.cont-body
@@ -332,7 +332,7 @@ block content
         #collapseFour.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFour')
           .panel-body
             aside.text-right
-              a(href='/acount-conferencia/empty')
+              a(href='/conferencias/acount/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio 
             .row.cont-body
@@ -431,7 +431,7 @@ block content
         #collapseFive.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingFive')
           .panel-body
             aside.text-right
-              a(href='/acount-instructor/empty')
+              a(href='/instructores/acount/empty')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio 
             .row.cont-body
