--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -82,7 +82,7 @@ block content
           div.total.events-link.col-sm-7.col-lg-4
             div.cousin
               div.result.thumbnail.offer.margins.links.hvr-grow-shadow
-               a.image-a.img-responsive(href='/details/'+ retiro.id)
+               a.image-a.img-responsive(href='/retiros/details/'+ retiro.id)
                 img(src= retiro.imageUrl, width="201px" height="174px" class="image2")
                 
                  
