--- a/views/add-event-instructor.pug
+++ b/views/add-event-instructor.pug
@@ -25,14 +25,14 @@ block content
  
   h1.font-categories.container Instructores
   .container.well
-      form.edit-retiro(action= action ? action : '/acount-instructor/add' method= method ? method : 'POST' enctype="multipart/form-data")
+      form.edit-retiro(action= action ? action : '/instructores/acount/add' method= method ? method : 'POST' enctype="multipart/form-data")
         .container
           .col-sm-8        
         .row
             br
             fieldset.form-group.col-sm-2
               label Foto carnet
-             input.img-picker(type="file", name="imageUrl" id="image_item" value= !instructores ? " " : instructores.imageUrl)
+            input.img-picker(type="file", name="imageUrl" id="image_item" value= !instructores ? " " : instructores.imageUrl)
 		  
         .row
           .col-xs-4
