--- a/views/add-event-retiro.pug
+++ b/views/add-event-retiro.pug
@@ -24,14 +24,14 @@ block content
  
   h1.font-categories.container Retiros
   .container.well
-      form.edit-retiro(action= action ? action : '/acount-retiro/add' method= method ? method : 'POST' enctype="multipart/form-data", onload="initialize()")
+      form.edit-retiro(action= action ? action : '/retiros/acount/add' method= method ? method : 'POST' enctype="multipart/form-data", onload="initialize()")
         .container
           .col-sm-8        
         .row
             br
             fieldset.form-group.col-sm-2
               label Fotografía
-              input.img-picker(type="file", name="imageUrl" id="image_item" value= !retiros ? " " : retiros.image_Url )    
+              input.img-picker(type="file", name="imageUrl" id="image_item" value= !retiros ? " " : retiros.imageUrl )    
               //- .img-picker
             
             //- fieldset.form-group.col-sm-2
